--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "react-scripts": "1.1.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --env=jsdom",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
